# pkg_testing_01

./: .releaserc  .releaserc.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependabot.yml  semantic_release.yaml  test.yml
docs/: semantic_release.md
pkg_testing_01/: __init__.py  some_module.py
tests/: test_some_module.py
