[tool.poetry]
name = "pkg-testing-01"
version = "1.1.0"
description = ""
authors = ["George Lenton <georgelenton@gmail.com>"]
readme = "README.md"
packages = [{include = "pkg_testing_01"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
