[tool.poetry]
name = "pkg-testing-01"
version = "1.1.3-dev.1"
description = ""
authors = ["George Lenton <georgelenton@gmail.com>"]
readme = "README.md"
packages = [{include = "pkg_testing_01"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
fastapi = "^0.104.1"
pandas = "^2.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
