[tool.poetry]
name = "pkg-testing-01"
version = "1.1.3"
description = ""
authors = ["George Lenton <georgelenton@gmail.com>"]
readme = "README.md"
packages = [{include = "pkg_testing_01"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
fastapi = "^0.104.1"
pandas = "^2.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.1.15"


[tool.poetry.group.for_the_sake_of_it.dependencies]
textual = "^0.44.1"
mkdocs = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
